feat: seed sale transactions
