# src/Srs.Api/Controllers/Controllers.cs
@@ -122,6 +122,52 @@ public class SeedProductsRequestHandler : IRequestHandler<SeedProducts, List<Pro
 	}
 }
 
+public record SeedSaleTransactions(int Count = 100) : IRequest<List<SaleTransaction>>;
+
+public class SeedSaleTransactionsRequestHandler : IRequestHandler<SeedSaleTransactions, List<SaleTransaction>>
+{
+	private readonly SrsDbContext _db;
+	private readonly IMediator _mediator;
+
+	public SeedSaleTransactionsRequestHandler(SrsDbContext db, IMediator mediator)
+	{
+		_db = db;
+		_mediator = mediator;
+	}
+
+	public async Task<List<SaleTransaction>> Handle(SeedSaleTransactions request, CancellationToken cancellationToken)
+	{
+		if (!await _db.Products.AnyAsync(cancellationToken))
+		{
+			await _mediator.Send(new SeedProducts(request.Count), cancellationToken);
+		}
+		var products = await _db.Products.ToListAsync(cancellationToken);
+		
+		var saleItems = new Faker<SaleItem>()
+			.Rules((f, x) =>
+			{
+				x.Product = f.PickRandom(products);
+				x.Quantity = f.Random.Int(0, 10000);
+				x.Total = x.Product.UnitPrice * x.Quantity;
+			});
+		var users = await _db.Users.ToListAsync(cancellationToken);
+		var saleTransaction = new Faker<SaleTransaction>()
+			.Rules((f, x) =>
+			{
+				x.Items = saleItems.Generate(f.Random.Int(0, 100));
+				x.Total = x.Items.Sum(x => x.Total);
+				x.User = f.PickRandom(users);
+				x.CreatedAt = f.Date.Between(new DateTime(2020, 1, 1), new DateTime(2025, 1, 1));
+				x.LastUpdatedAt = f.Date.Between(x.CreatedAt, DateTime.Now);
+			});
+
+		var sales = saleTransaction.Generate(request.Count);
+		await _db.SaleTransactions.AddRangeAsync(sales, cancellationToken);
+		await _db.SaveChangesAsync(cancellationToken);
+
+		return sales;
+	}
+}
 
 [ApiController]
 [Route("[controller]/[action]")]
@@ -152,10 +198,16 @@ public class DbAdminController : ControllerBase
 	{
 		await _mediator.Send(request);
 	}
+
+	[HttpPost]
+	public async Task SeedSaleTransactions(SeedSaleTransactions request)
+	{
+		await _mediator.Send(request);
+	}
 }
 
 [ApiController]
-[Route("[controller]")]
+[Route("[controller]/[action]")]
 public class ProductsController
 {
 	private readonly SrsDbContext _db;
@@ -165,12 +217,31 @@ public class ProductsController
 		_db = db;
 	}
 
-	// todo: use dto
 	[Authorize]
 	[HttpGet]
 	public async Task<List<Product>> GetAll()
 	{
 		var products = await _db.Products.ToListAsync();
 		return products;
+	}
+}
+
+[ApiController]
+[Route("[controller]/[action]")]
+public class SaleTransactionController
+{
+	private readonly SrsDbContext _db;
+
+	public SaleTransactionController(SrsDbContext db)
+	{
+		_db = db;
+	}
+
+	[Authorize]
+	[HttpGet]
+	public async Task<List<SaleTransaction>> GetAll()
+	{
+		var transactions = await _db.SaleTransactions.ToListAsync();
+		return transactions;
 	}
 }
